# pia-scrap

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  main.py  novels.txt  pia-scrap-gui.spec  pia-scrap.spec  pr_description.md  pyproject.toml  requirements-gui.txt  requirements-web.txt  requirements.txt  web_app.py
.github/workflows/: build-zip.yml  ci.yml
.jules/: bolt.md
gui/: gui.py
gui/languages/: english.json
src/: api.py  builder.py  chapter_cache.py  chapter_pipeline.py  const.py  contracts.py  epub.py  export.py  helper.py  html_norm.py  logutil.py  novel.py  runner.py  web_jobs.py
src/api/: __init__.py  blocks.py  client.py  http.py  parse.py
templates/: index.html
tests/: test_api.py  test_api_coverage.py  test_builder.py  test_epub.py  test_helper.py  test_integration.py  test_novel.py  test_runner.py  test_web.py  test_web_app.py
web/: web.py
web/templates/: index.html
