[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pia-scrap"
version = "2.6.0"
description = "Novelpia scraper & EPUB converter — API-based novel downloader"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [
    { name = "Bayu Erich" },
]
keywords = ["novelpia", "scraper", "epub", "web-novel"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
]

dependencies = [
    "beautifulsoup4==4.12.*",
    "ebooklib==0.18",
    "requests==2.32.*",
    "tqdm==4.66.*",
    "python-dotenv==1.0.*",
    "PySocks==1.7.*",
    "lxml==5.2.*",
    "typing_extensions==4.16.*",
]

[project.optional-dependencies]
web = [
    "fastapi==0.115.*",
    "uvicorn==0.34.*",
]
dev = [
    "pytest>=8,<9",
    "pytest-cov>=5,<6",
    "ruff>=0.5,<1",
    "mypy>=1.10,<2",
    "types-beautifulsoup4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.py"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security)
    "B",   # flake8-bugbear
    "T20", # flake8-print (warn on print)
]
ignore = [
    "S101",  # allow assert
    "T201",  # allow print (CLI tool)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"test_*.py" = ["S101", "T201"]
"web_app.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
strict = false
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true
check_untyped_defs = true
disallow_any_unimported = false
disallow_untyped_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["ebooklib", "bs4", "tqdm"]
ignore_missing_imports = true

[tool.pyright]
include = ["main.py", "web_app.py", "src", "tests"]
venvPath = "."
venv = "venv"
exclude = [
    ".venv",
    "venv",
    "**/__pycache__",
    ".pytest_cache",
    ".ruff_cache",
    ".mypy_cache",
    "build",
    "dist",
    "output",
    ".venv-build",
    "**/node_modules",
    "**/.*"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = ["ignore::DeprecationWarning"]
